fix media cover-link grid-row-gap

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -16,7 +16,7 @@
   text-align: center;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 550px) {
 
   .cover__subtitle {
     max-width: 280px;
