--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -17,7 +17,7 @@
 }
 
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 550px) {
 
   .cover__title {
     max-width: 250px;
